# chemistry-lab-design

./: .env.example  .gitignore  ARCHITECTURE.md  BLUEPRINT.md  Makefile  README.md  README_NEW.md  chemistry_lab_agent_new.py  chemistry_lab_layout_generator.py  chemistry_lab_layout_to_image.py  chemistry_lab_layout_visualizer.py  chemistry_lab_room_designer.py  crude_layout_test.json  crude_layout_test2.json  crude_salt_purification_equipment.txt  crude_salt_purification_large_equipment_20251111_165327.json  crude_salt_purification_layout_11_11_20_20.json  crude_salt_purification_layout_20251109_201820.json  crude_salt_purification_layout_20251109_205236.json  crude_salt_purification_layout_20251110_145137.json  crude_salt_purification_layout_final.json  crude_salt_purification_room_design_20251108_211714.txt  crude_salt_purification_small_equipment_20251111_165327.json  equipment_bounding_boxes.json  equipment_bounding_boxes1.json  equipment_bounding_boxes3.json  pyproject.toml  requirements.txt  small_equipment.json
Docs/: todos_20260403.md  todos_20260404.md
data/constraints/: constraints.json
data/equipment/: large_equipment.json
scripts/: chemistry_lab_agent.py  chemistry_lab_layout_visualizer_v2.py  equipment_bounding_box_generator.py  equipment_filter_by_experiment.py
src/chemistry_lab/: __init__.py  __main__.py  cli.py  client.py  config.py  equipment.py  layout.py  models.py  parser.py  renderer.py  room.py  (+1 more)
tests/: test_api_mock.py  test_cli.py  test_equipment.py  test_layout.py  test_models.py  test_parser.py  test_room.py  test_validator.py
