[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemistry-lab"
version = "0.1.0"
description = "Chemistry Lab Layout Generator – AI-powered equipment lists, space planning, and 2D visualisation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Chemistry Lab Team"}]

dependencies = [
    "openai>=1.0.0",
    "dashscope>=0.0.1",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
chemistry-lab = "chemistry_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100
